
Version 2.3 ->
------------------
 - added 'typeof' to reserved word list
 - added Java stacktrace to __str__() of JavaError, fixing half of PYLUCENE-1
 - 

Version 2.2 -> 2.3
------------------
 - fixed Solaris compilation issue with using va_arg() with function pointers
 - added --reserved command line arg to extend list of words to mangle
 - fixed bug with initJCC not being run when Python VM embedded in JVM
 - added --wininst to enable use of bdist_wininst with distutils (Jonas Maurus)
 - added --help to describe command line options (Jonas Maurus)
 - added support for --rename to workaround python flattened namespace clashes
 - fixed bug with Enumeration/Iterator template function instantiation
 - removed -framework Python from darwin link flags in setup.py

Version 2.1 -> 2.2
------------------
 - JCC now a subproject of the Apache PyLucene project
 - fixed bug where thread's JNIEnv was not set before calling findClass()
 - unhandled java exception now is printed out via ExceptionDescribe()
 - added cast to placate Solaris compiler error in JArray.cpp
 - JArray Python wrappers should return None when passed a null array
 - added JDK variable to setup.py to better parameterize build configuration
 - added support for proxying mapping and sequence protocols on FinalizerProxy
 - changed Type suffix to $$Type to avoid clashes with like-named Java classes
 - added 'bool' and 'operator' to list of reserved words
 - added support for packages and classes named with C++ reserved words
 - static methods shadowed by non-static methods of same name now '_' suffixed
 - added 'java.lang' to --package by default
 - added isCurrentThreadAttached() method to VMEnv
 - added MANIFEST.in to exclude generated jcc/config.py (Christian Heimes)
 - passing strings for byte[] or char[] is no longer supported, use JArray
 - failure to call initVM() now reported with error instead of crash
 - failure to find class now reported with error instead of crash